function calculateCartTotal + CalculateMidTotal